; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_jump.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_free_ir_jump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlsl_ir_jump = type { i64, i32 }

@HLSL_IR_JUMP_RETURN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hlsl_ir_jump*)* @free_ir_jump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_ir_jump(%struct.hlsl_ir_jump* %0) #0 {
  %2 = alloca %struct.hlsl_ir_jump*, align 8
  store %struct.hlsl_ir_jump* %0, %struct.hlsl_ir_jump** %2, align 8
  %3 = load %struct.hlsl_ir_jump*, %struct.hlsl_ir_jump** %2, align 8
  %4 = getelementptr inbounds %struct.hlsl_ir_jump, %struct.hlsl_ir_jump* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @HLSL_IR_JUMP_RETURN, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.hlsl_ir_jump*, %struct.hlsl_ir_jump** %2, align 8
  %10 = getelementptr inbounds %struct.hlsl_ir_jump, %struct.hlsl_ir_jump* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @free_instr(i32 %11)
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.hlsl_ir_jump*, %struct.hlsl_ir_jump** %2, align 8
  %15 = call i32 @d3dcompiler_free(%struct.hlsl_ir_jump* %14)
  ret void
}

declare dso_local i32 @free_instr(i32) #1

declare dso_local i32 @d3dcompiler_free(%struct.hlsl_ir_jump*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
